Fix z-index issues

--- a/app/scripts/src/less/ui/replay/activeSpell.less
+++ b/app/scripts/src/less/ui/replay/activeSpell.less
@@ -7,6 +7,7 @@
 	width: 23%;
     flex-direction: column;
     pointer-events: none;
+    z-index: 99;
 
 	.active-spell {
 	    width: 100%;
