--- a/app/scripts/src/less/ui/replay/target.less
+++ b/app/scripts/src/less/ui/replay/target.less
@@ -2,11 +2,11 @@
 	position: absolute;
 	background-color: #409ACC;
   	width: 4px;
-  	z-index: 1;
+    z-index: 100;
 
   	&::after {
 		content: '';
-		display: block; 
+		display: block;
 		left: -8px;
 		position: absolute;
 		border-bottom: 10px solid #409ACC;
